--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - NODE_ENV=production
     command: npm run dev
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 15s
       timeout: 5s
       retries: 5
