Changed to allow all branches (fixed)

--- a/.github/workflows/ci_deploy.yml
+++ b/.github/workflows/ci_deploy.yml
@@ -5,7 +5,7 @@ name: DevOps Pipeline
 on:
   push:
     branches:
-      - ** # This will trigger the workflow on any push to any branch. In production, you might want to limit this to main or a specific branch.
+      - '**' # This will trigger the workflow on any push to any branch. In production, you might want to limit this to main or a specific branch.
   pull_request:
     branches:
       - main
