--- a/.github/workflows/ci_deploy.yml
+++ b/.github/workflows/ci_deploy.yml
@@ -5,7 +5,7 @@ name: DevOps Pipeline
 on:
   push:
     branches:
-      - '**' # This will trigger the workflow on any push to any branch. In production, you might want to limit this to main or a specific branch.
+      - main
   pull_request:
     branches:
       - main
@@ -35,16 +35,16 @@ jobs:  # The first job, build-and-test, is responsible making sure the source ca
 
   build-and-deploy:
     needs: test-build
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/') # This job will only run if the push is to the main branch or any branch that starts with 'refs/heads/'
+    if: github.ref == 'refs/heads/main'  # only run this job if the push is to the main branch
     runs-on: ubuntu-latest
 
-    # env:
-    #   EcrRepoDev: ${{ secrets.ECR_REPO_DEV }}
-    #   EcrRepoProd: ${{ secrets.ECR_REPO_PROD }}
-    #   TF_DYNAMODB_TABLE: ${{ secrets.TF_DYNAMODB_TABLE }}
-    #   TF_BUCKET: ${{ secrets.TF_BUCKET }}
-    #   TF_BACKEND_KEY_PROD: ${{ secrets.TF_BACKEND_KEY_PROD }}
-    #   TF_BACKEND_KEY_DEV: ${{ secrets.TF_BACKEND_KEY_DEV }}
+    env:
+      EcrRepoDev: ${{ secrets.ECR_REPO_DEV }}
+      EcrRepoProd: ${{ secrets.ECR_REPO_PROD }}
+      TF_DYNAMODB_TABLE: ${{ secrets.TF_DYNAMODB_TABLE }}
+      TF_BUCKET: ${{ secrets.TF_BUCKET }}
+      TF_BACKEND_KEY_PROD: ${{ secrets.TF_BACKEND_KEY_PROD }}
+      TF_BACKEND_KEY_DEV: ${{ secrets.TF_BACKEND_KEY_DEV }}
 
 
     steps:
@@ -53,18 +53,6 @@ jobs:  # The first job, build-and-test, is responsible making sure the source ca
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          # role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}  # specify the role to assume
-          role-session-name: GitHubActionsSession  # specify a session name for the role
-          aws-region: us-east-1  # specify the AWS region
-
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-        # with:
-          # registry: ${{ secrets.AWS_ECR_REGISTRY }}  # specify the ECR registry in secrets
 
       - name: Setup Envineronment Variables and Repository
         id: setup-env
@@ -105,6 +93,18 @@ jobs:  # The first job, build-and-test, is responsible making sure the source ca
           npm install cdktf-cli
           npx cdktf get
           npx cdktf synth
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          # role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}  # specify the role to assume
+          role-session-name: GitHubActionsSession  # specify a session name for the role
+          aws-region: us-east-1  # specify the AWS region
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v3
+        with:
+          registry: ${{ secrets.AWS_ECR_REGISTRY }}  # specify the ECR registry in secrets
 
       - name: Deploy CDKTF
         working-directory: ./iac
